--- a/mandelbrot.ipynb
+++ b/mandelbrot.ipynb
@@ -4,29 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Mandelbrot set demo"
+    "# Mandelbrot set"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook comes from the following snippet:\n",
-    "https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py\n",
-    "\n",
-    "To display this notebook on nbviewer.jupyter.org, visit the following link:\n",
-    "http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb"
+    "This notebook is also available on [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py"
+    "## Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Soit la suite $\\{z_i\\}$ de nombres complexes defini par\n",
+    "\n",
+    "$$\n",
+    "z_{i+1} = z^2_i + c\n",
+    "$$\n",
+    "\n",
+    "avec $z_0 = 0$ et avec $c \\in \\mathbb C$ une constante fixée.\n",
+    "\n",
+    "L'ensemble de Mandelbrot est l'ensemble de tous les nombres $c$ pour lesquels cette suite converge ;\n",
+    "la suite tend vers l'infini pour les nombres $c$ n'appartenant pas à l'ensemble de Mandelbrot.\n",
+    "\n",
+    "Ci-dessous, l'ensemble de Mandelbrot est représenté graphiquement dans le plan complexe (plus la suite diverge vite plus le point est claire).\n",
+    "\n",
+    "Référence: *Toutes les mathématiques et les bases de l'informatique*, H. Stöcker, Dunod, p.696"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A python implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following script is also available there:\n",
+    "https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, lets import some packages."
    ]
   },
   {
@@ -40,7 +74,7 @@
     "%matplotlib inline\n",
     "\n",
     "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = (6, 6)\n",
+    "matplotlib.rcParams['figure.figsize'] = (8, 8)\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,6 +83,13 @@
     "\n",
     "import ipywidgets\n",
     "from ipywidgets import interact"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then lets define the Mandelbrot set."
    ]
   },
   {
@@ -70,7 +111,7 @@
     "\n",
     "    # Rem: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
     "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
-    "        z = pow(z, 2) + c\n",
+    "        z = z**2 + c\n",
     "        it += 1\n",
     "\n",
     "    # To print all levels\n",
@@ -81,6 +122,48 @@
     "    #    return 1\n",
     "    #else:\n",
     "    #    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, lets display the Mandelbrot set in the complex plane."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
+    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "\n",
+    "# Compute datas #############\n",
+    "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
+    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "\n",
+    "# Plot data #################\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot mean surface\n",
+    "# (nice color maps: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
+    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
+    "\n",
+    "# Set title and labels\n",
+    "plt.title(\"Mandelbrot set\")\n",
+    "ax.set_xlabel(\"Re(c)\")\n",
+    "ax.set_ylabel(\"Im(c)\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can also be represented in 3 dimensions to illustrate the iterative process."
    ]
   },
   {
@@ -109,37 +192,7 @@
     "plt.title(\"Mandelbrot set\")\n",
     "ax.set_xlabel(\"Re(c)\")\n",
     "ax.set_ylabel(\"Im(c)\")\n",
-    "ax.set_zlabel(\"Color\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Plot data #################\n",
-    "\n",
-    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
-    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
-    "\n",
-    "# Compute datas #############\n",
-    "\n",
-    "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
-    "\n",
-    "# Plot data #################\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "# Plot mean surface\n",
-    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\")\n",
-    "\n",
-    "# Set title and labels\n",
-    "plt.title(\"Mandelbrot set\")\n",
-    "ax.set_xlabel(\"Re(c)\")\n",
-    "ax.set_ylabel(\"Im(c)\")"
+    "ax.set_zlabel(\"Iterations\");"
    ]
   }
  ],
