--- a/mandelbrot_set_fr.ipynb
+++ b/mandelbrot_set_fr.ipynb
@@ -4,63 +4,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mandelbrot set"
+    "# L'ensemble de Mandelbrot"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is also available on [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb)."
+    "Ce notebook peut egalement etre consulté sur [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition"
+    "## Définition"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\left( z_i \\right)$ be a sequence of complex numbers defined as follow\n",
+    "Soit la suite $\\{z_i\\}$ de nombres complexes definie par\n",
     "\n",
     "$$\n",
     "z_{i+1} = z^2_i + c\n",
     "$$\n",
     "\n",
-    "with $z_0 = 0$ and $c \\in \\mathbb C$ a fixed constant.\n",
+    "avec $z_0 = 0$ et avec $c \\in \\mathbb C$ une constante fixée.\n",
     "\n",
-    "The Mandelbrot set is the set of all the complex numbers $c$ for which this sequence does not diverge (i.e. remains bounded in absolute value) ;\n",
-    "in other words, the sequence tends to infinity for the numbers $c$ which do not belong to the Mandelbrot set\n",
-    "(i.e. $\\lim_{i \\to +\\infty}{|z_i|} = +\\infty$ where $|z_i|$ is the modulus of $z_i$).\n",
+    "L'ensemble de Mandelbrot est l'ensemble de tous les nombres $c$ pour lesquels cette suite converge ;\n",
+    "la suite tend vers l'infini pour les nombres $c$ n'appartenant pas à l'ensemble de Mandelbrot (i.e. $\\lim_{i \\to +\\infty}{|z_i|} = +\\infty$ où $|z_i|$ est le module de $z_i$).\n",
     "\n",
-    "Here we will make a graphical representation of the Mandelbrot set (pixels are colored according to how rapidly the sequence diverges, the sooner the sequence diverges, the clearer the point).\n",
+    "Ci-dessous, l'ensemble de Mandelbrot est représenté graphiquement dans le plan complexe (plus la suite diverge vite plus le point est claire).\n",
     "\n",
-    "Reference: *Toutes les mathématiques et les bases de l'informatique*, H. Stöcker, Dunod, p.696"
+    "Référence: *Toutes les mathématiques et les bases de l'informatique*, H. Stöcker, Dunod, p.696"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A Python implementation"
+    "## Une implementation Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: the following Python script is also available [there](https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py)."
+    "Note: ce script Python peut également être téléchargé [ici](https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, lets import some packages."
+    "Commençons par importer les paquets requis :"
    ]
   },
   {
@@ -89,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then lets define the Mandelbrot set."
+    "Puis définissons itérativement l'ensemble de Mandelbrot :"
    ]
   },
   {
@@ -109,15 +108,15 @@
     "    z = Z_INIT\n",
     "    c = complex(x, y)\n",
     "\n",
-    "    # Rem: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
+    "    # Remarque: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
     "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
     "        z = z**2 + c\n",
     "        it += 1\n",
     "\n",
-    "    # To print all levels\n",
+    "    # Pour afficher tous les niveaux\n",
     "    return it\n",
     "\n",
-    "    ## To print only the level #N\n",
+    "    ## Pour afficher uniquement le niveau #N\n",
     "    #if it < N:\n",
     "    #    return 1\n",
     "    #else:\n",
@@ -128,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, lets display the Mandelbrot set in the complex plane."
+    "Nous pouvons alors représenter graphiquement l'ensemble de Mandelbrot dans le plan complexe :"
    ]
   },
   {
@@ -142,17 +141,17 @@
     "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
     "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
     "\n",
-    "# Compute datas #############\n",
+    "# Definie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
     "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
-    "# Plot data #################\n",
-    "# (nice color maps: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
+    "# Génère l'image\n",
+    "# (cmap alternatifs: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
     "fig, ax = plt.subplots()\n",
     "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
     "\n",
-    "# Set title and labels\n",
-    "plt.title(\"Mandelbrot set\")\n",
+    "# Ajoute un titre à l'image et nome les axes\n",
+    "ax.set_title(\"Ensemble de Mandelbrot\")\n",
     "ax.set_xlabel(\"Re(c)\")\n",
     "ax.set_ylabel(\"Im(c)\")\n",
     "\n",
@@ -177,20 +176,20 @@
     "REAL_RANGE = np.arange(-2.0, 1.0, 0.05).tolist()\n",
     "IMAG_RANGE = np.arange(-1.2, 1.2, 0.05).tolist()\n",
     "\n",
-    "# Compute datas #############\n",
+    "# Definie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
     "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
-    "# Plot data #################\n",
+    "# Génère la figure\n",
     "fig = plt.figure()\n",
     "ax = axes3d.Axes3D(fig)\n",
     "ax.plot_surface(xgrid, ygrid, data, cmap=cm.jet, rstride=1, cstride=1, color='b', shade=True)\n",
     "\n",
-    "# Set title and labels\n",
-    "plt.title(\"Mandelbrot set\")\n",
+    "# Ajoute un titre à l'image et nome les axes\n",
+    "plt.title(\"Ensemble de Mandelbrot\")\n",
     "ax.set_xlabel(\"Re(c)\")\n",
     "ax.set_ylabel(\"Im(c)\")\n",
-    "ax.set_zlabel(\"Iterations\")\n",
+    "ax.set_zlabel(\"Itérations\")\n",
     "\n",
     "plt.show()"
    ]
