--- a/mandelbrot_set_fr.ipynb
+++ b/mandelbrot_set_fr.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ce notebook peut egalement etre consulté sur [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb)."
+    "Ce notebook peut également être consulté sur [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb)."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Soit la suite $\\{z_i\\}$ de nombres complexes definie par\n",
+    "Soit la suite $\\{z_i\\}$ de nombres complexes définie par\n",
     "\n",
     "$$\n",
     "z_{i+1} = z^2_i + c\n",
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Une implementation Python"
+    "## Une implémentation Python"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Puis définissons itérativement l'ensemble de Mandelbrot :"
+    "Puis définissons l'ensemble de Mandelbrot par itérations successives :"
    ]
   },
   {
@@ -113,10 +113,10 @@
     "        z = z**2 + c\n",
     "        it += 1\n",
     "\n",
-    "    # Pour afficher tous les niveaux\n",
+    "    # Pour afficher tous les niveaux d'itération\n",
     "    return it\n",
     "\n",
-    "    ## Pour afficher uniquement le niveau #N\n",
+    "    ## Pour afficher uniquement l'ensemble défini au niveau d'itération N\n",
     "    #if it < N:\n",
     "    #    return 1\n",
     "    #else:\n",
@@ -141,7 +141,7 @@
     "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
     "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
     "\n",
-    "# Definie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
+    "# Définie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
     "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can also be represented in 3 dimensions to illustrate the iterative process."
+    "Nous pouvons aussi représenter cet ensemble en 3 dimensions pour mieux mettre en évidence l'aspect itératif du processus de construction de l'ensemble de Mandelbrot."
    ]
   },
   {
@@ -176,7 +176,7 @@
     "REAL_RANGE = np.arange(-2.0, 1.0, 0.05).tolist()\n",
     "IMAG_RANGE = np.arange(-1.2, 1.2, 0.05).tolist()\n",
     "\n",
-    "# Definie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
+    "# Définie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
     "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
