--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -40,6 +40,11 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "#%matplotlib notebook\n",
+    "\n",
+    "from IPython.display import display\n",
+    "\n",
     "import numpy as np"
    ]
   },
@@ -1211,6 +1216,70 @@
    "outputs": [],
    "source": [
     "a.astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Masked arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.array([[np.nan, 2, 3], [1, np.nan, 6]])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.mean(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ma = np.ma.masked_where(np.isnan(a), a)\n",
+    "ma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.mean(ma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ma.shape"
    ]
   }
  ],
