--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -633,6 +633,94 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select indices satisfying multiple conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Short version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.array([[-1, 7, 3], [-11, -5, 20]])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a[(a > -10) & (a < 10)] = 0\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a[(a < -10) | (a > 10)] = 1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Detailed version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.array([[-1, 7, 3], [-11, -5, 20]])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "m1 = (a > -10)\n",
+    "m2 = (a < 10)\n",
+    "\n",
+    "print(m1)\n",
+    "print(m2)\n",
+    "print(m1 & m2)\n",
+    "\n",
+    "a[m1 & m2] = 0\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -1252,7 +1340,7 @@
    },
    "outputs": [],
    "source": [
-    "np.min(a)"
+    "a.min()"
    ]
   },
   {
@@ -1263,7 +1351,31 @@
    },
    "outputs": [],
    "source": [
-    "np.max(a)"
+    "np.nanmin(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "a.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "np.nanmax(a)"
    ]
   },
   {
@@ -1274,7 +1386,18 @@
    },
    "outputs": [],
    "source": [
-    "np.mean(a)"
+    "a.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.nanmean(a)"
    ]
   },
   {
@@ -1315,7 +1438,7 @@
    },
    "outputs": [],
    "source": [
-    "np.min(ma)"
+    "ma.min()"
    ]
   },
   {
@@ -1326,7 +1449,7 @@
    },
    "outputs": [],
    "source": [
-    "np.max(ma)"
+    "ma.max()"
    ]
   },
   {
@@ -1337,7 +1460,7 @@
    },
    "outputs": [],
    "source": [
-    "np.mean(ma)"
+    "ma.mean()"
    ]
   },
   {
