Put some content.

--- a/astropy.ipynb
+++ b/astropy.ipynb
@@ -11,23 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import directives"
+    "Official documentation: http://docs.astropy.org/en/stable/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Units"
+    "## Units and Quantities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Quantities**  (``astropy.units.quantity``) are the combination of a **value** (integer, float, ...) and a **unit** (``astropy.units``)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Documentation:\n",
+    "- http://docs.astropy.org/en/stable/units/index.html\n",
+    "- http://docs.astropy.org/en/stable/units/quantity.html\n",
+    "\n",
+    "List of available units: http://docs.astropy.org/en/stable/units/index.html#module-astropy.units.si"
    ]
   },
   {
@@ -37,7 +46,98 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from astropy import units as u"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attach units to scalar values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "1.85 * u.meter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "500. * u.gram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "400. * u.hertz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q = 2000. * u.meter\n",
+    "type(q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attach units to lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "[1., 2., 3.] * u.meter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attach units to Numpy array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.array([1., 2., 3.]) * u.meter"
+   ]
   }
  ],
  "metadata": {
