--- a/mandelbrot_set_en.ipynb
+++ b/mandelbrot_set_en.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is also available on [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb)."
+    "This notebook is also available on [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot_set_en.ipynb)."
    ]
   },
   {
@@ -79,10 +79,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
-    "from matplotlib import cm\n",
-    "\n",
-    "import ipywidgets\n",
-    "from ipywidgets import interact"
+    "from matplotlib import cm"
    ]
   },
   {
