--- a/ai_perceptron_fr.ipynb
+++ b/ai_perceptron_fr.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Perceptron"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Auteur: F. Rosenblatt\n",
     "\n",
     "Reference: F. Rosenblatt 1958 *The Perceptron: a Probabilistic Model for Information Storage and Organization in the Brain* Psychological Review, 65, 386-408\n",
@@ -90,110 +97,10 @@
    },
    "outputs": [],
    "source": [
-    "def init_figure(size_x=10, size_y=5):\n",
-    "    fig, ax = plt.subplots(figsize=(size_x, size_y))\n",
-    "    ax.set_axis_off()\n",
-    "    ax.axis('equal')\n",
-    "    ax.set_xlim(-10, 20)   # TODO\n",
-    "    return fig, ax\n",
+    "# https://github.com/jeremiedecock/neural-network-figures.git\n",
+    "import nnfigs.core as fig\n",
     "\n",
-    "def draw_neuron(axis,\n",
-    "                center,\n",
-    "                radius,\n",
-    "                fill_color='w',\n",
-    "                line_color='k',\n",
-    "                line_width=1,\n",
-    "                ag_func=None,\n",
-    "                tr_func=None):\n",
-    "    \n",
-    "    #circle = plt.Circle(center, radius, fill=True, color=fill_color, alpha=0)\n",
-    "    #axis.add_artist(circle)\n",
-    "    \n",
-    "    circle = patches.Circle(center,\n",
-    "                            radius=1,\n",
-    "                            fill=True,\n",
-    "                            edgecolor=line_color,\n",
-    "                            facecolor=fill_color)\n",
-    "    circle.set_zorder(20)  # put the circle on top\n",
-    "    axis.add_patch(circle)\n",
-    "    \n",
-    "    #circle = plt.Circle(center, radius, fill=False, color=line_color)\n",
-    "    #ax.add_artist(circle)\n",
-    "\n",
-    "    x = center[0]\n",
-    "    y = center[1]\n",
-    "    \n",
-    "    line = mlines.Line2D([x, x],\n",
-    "                         [y - radius + 0.05, y + radius - 0.05],\n",
-    "                         lw=line_width,\n",
-    "                         color=line_color)\n",
-    "    line.set_zorder(21)\n",
-    "    axis.add_line(line)\n",
-    "    \n",
-    "    # Agregation function ######################\n",
-    "    \n",
-    "    if ag_func == \"sum\":\n",
-    "        line = mlines.Line2D([x - radius/4., x - 3 * radius/4., x - radius/2., x - 3. * radius/4., x - radius/4.],\n",
-    "                             [y + radius/4., y + radius/4., y, y - radius/4., y - radius/4.],\n",
-    "                             lw=line_width,\n",
-    "                             color=line_color)\n",
-    "        line.set_zorder(21)\n",
-    "        axis.add_line(line)\n",
-    "    \n",
-    "    # Transition function ######################\n",
-    "    \n",
-    "    if tr_func == \"linear\":\n",
-    "        line = mlines.Line2D([x + radius/4., x + 3. * radius/4.],\n",
-    "                             [y - radius/4., y + radius/4.],\n",
-    "                             lw=line_width,\n",
-    "                             color=line_color)\n",
-    "        line.set_zorder(21)\n",
-    "        axis.add_line(line)\n",
-    "    elif tr_func == \"logistic\":\n",
-    "        line = mlines.Line2D([x + radius/4., x + radius/2., x + radius/2., x + 3. * radius/4.],\n",
-    "                             [y - radius/4., y - radius/4., y + radius/4., y + radius/4.],\n",
-    "                             lw=line_width,\n",
-    "                             color=line_color)\n",
-    "        line.set_zorder(21)\n",
-    "        axis.add_line(line)\n",
-    "\n",
-    "        \n",
-    "def draw_synapse(axis, p1, p2, color='k', line_width=1, label=\"\", label_position=0.25, label_offset_y=0.3):\n",
-    "    line = mlines.Line2D([p1[0], p2[0]],\n",
-    "                         [p1[1], p2[1]],\n",
-    "                         lw=line_width,\n",
-    "                         color=color)\n",
-    "    line.set_zorder(10)\n",
-    "    axis.add_line(line)\n",
-    "    \n",
-    "    plt.text(x=p1[0] + label_position * (p2[0]-p1[0]),\n",
-    "             y=p1[1] + label_position * (p2[1]-p1[1]) + label_offset_y,\n",
-    "             s=label)\n",
-    "\n",
-    "\n",
-    "def draw_neural_network():\n",
-    "    fig, ax = init_figure()\n",
-    "\n",
-    "    draw_synapse(ax, (-2, -6), (0, -6), label=r\"$x_4$\", label_position=0)\n",
-    "    draw_synapse(ax, (-2, -2), (0, -2), label=r\"$x_3$\", label_position=0)\n",
-    "    draw_synapse(ax, (-2,  2), (0,  2), label=r\"$x_2$\", label_position=0)\n",
-    "    draw_synapse(ax, (-2,  6), (0,  6), label=r\"$x_1$\", label_position=0)\n",
-    "\n",
-    "    draw_synapse(ax, (0, -6), (10, 0), label=r\"$w_4$\", label_offset_y=-0.7)\n",
-    "    draw_synapse(ax, (0, -2), (10, 0), label=r\"$w_3$\", label_offset_y=-0.7)\n",
-    "    draw_synapse(ax, (0, 2),  (10, 0), label=r\"$w_2$\")\n",
-    "    draw_synapse(ax, (0, 6),  (10, 0), label=r\"$w_1$\")\n",
-    "\n",
-    "    draw_synapse(ax, (10, 0), (12, 0), label_position=0.8, label=r\"$y$\")\n",
-    "\n",
-    "    draw_neuron(ax, (0, -6), 1, tr_func=\"logistic\")\n",
-    "    draw_neuron(ax, (0, -2), 1, tr_func=\"logistic\")\n",
-    "    draw_neuron(ax, (0, 2),  1, tr_func=\"logistic\")\n",
-    "    draw_neuron(ax, (0, 6),  1, tr_func=\"logistic\")\n",
-    "\n",
-    "    draw_neuron(ax, (10, 0), 1, ag_func=\"sum\", tr_func=\"logistic\")\n",
-    "\n",
-    "draw_neural_network()"
+    "fig.draw_neural_network();"
    ]
   },
   {
@@ -204,7 +111,10 @@
    },
    "outputs": [],
    "source": [
-    "w = np.array([0., 0., 0., 0., 2.])\n",
+    "# Init weights\n",
+    "initial_weights = np.array([0., 0., 0., 0., 2.])\n",
+    "\n",
+    "# Set \"learning rate\" factor\n",
     "nu = 1."
    ]
   },
@@ -216,11 +126,18 @@
    },
    "outputs": [],
    "source": [
-    "def update_w(w, x, yd):\n",
+    "def update_weights(w, x, yd):\n",
     "    s = np.sum(x * w)\n",
     "    yo = 1. if s >= 0. else 0.\n",
     "    w = w + nu * (yd - yo) * x\n",
     "    print(x, s, yo, yd, w)\n",
+    "    return w\n",
+    "\n",
+    "def learn_examples(example_list, label_list, w, num_iterations):\n",
+    "    for it in range(num_iterations):\n",
+    "        print(it)\n",
+    "        for x, yd in zip(example_list, label_list):\n",
+    "            w = update_weights(w, np.array(x + (-1,)), yd)\n",
     "    return w"
    ]
   },
@@ -232,13 +149,22 @@
    },
    "outputs": [],
    "source": [
-    "examples = tuple(reversed(tuple(itertools.product((0., 1.), repeat=4))))\n",
+    "example_list = tuple(reversed(tuple(itertools.product((0., 1.), repeat=4))))\n",
+    "label_list = [1. if x == (1., 0., 0., 1.) else 0. for x in example_list]\n",
     "\n",
-    "for it in range(4):\n",
-    "    print(it)\n",
-    "    for x in examples:\n",
-    "        yd = 1. if x == (1., 0., 0., 1.) else 0.\n",
-    "        w = update_w(w, np.array(x + (-1, )), yd)"
+    "print(example_list)\n",
+    "print(label_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "learn_examples(example_list, label_list, initial_weights, 4)"
    ]
   }
  ],
