--- a/ai_perceptron_fr.ipynb
+++ b/ai_perceptron_fr.ipynb
@@ -11,6 +11,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### TODO\n",
+    "\n",
+    "- **[ok]** Ajouter dans le code la fonction d'évaluation du réseau\n",
+    "- **[ok]** Plot de $\\sum |E|$ par itération (i.e. num updates par itération)\n",
+    "- Critere d'arrêt + générale\n",
+    "- Lire l'article de rérérence\n",
+    "- Ajouter la preuve de convergence\n",
+    "- Ajouter notations et explications\n",
+    "- Tester l'autre version de la règle de mise à jours de $w$: if err then ...\n",
+    "- **[ok]** Décrire et illustrer les deux fonctions de transfert: signe et heaviside\n",
+    "- Plot de l'evolution de la courbe de niveau ($x_1 w_1 + x_2 w_2 + ... = 0$) dans l'espace des entrées: illustration avec 2 entrées seulement ou faire un graph de projection (co. Tino)\n",
+    "- Plot de l'evolution de $w$ dans l'espace des $w$ illustration avec 2 entrées seulement ou faire un graph de projection (co. Tino)\n",
+    "- Ajouter \"Les limites du Perceptron\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\activthres}{\\theta}\n",
+    "\\newcommand{\\activfunc}{f}\n",
+    "\\newcommand{\\pot}{p}\n",
+    "\\newcommand{\\learnrate}{\\eta}\n",
+    "\\newcommand{\\it}{t}\n",
+    "\\newcommand{\\sigin}{s_i}\n",
+    "\\newcommand{\\sigout}{s_j}\n",
+    "\\newcommand{\\sigoutdes}{d_j}\n",
+    "\\newcommand{\\wij}{w_{ij}}\n",
+    "$$\n",
+    "\n",
     "Auteur: F. Rosenblatt\n",
     "\n",
     "Reference: F. Rosenblatt 1958 *The Perceptron: a Probabilistic Model for Information Storage and Organization in the Brain* Psychological Review, 65, 386-408\n",
@@ -18,11 +49,11 @@
     "Le modéle est constitué des éléments suivants:\n",
     "- des *unités sensitives (S-units)*: réagissent à un stimuli extérieur (lumière, son, touché, ...)\n",
     "    - retournent `0` ou `1`:\n",
-    "        - `1` si le signal d'entrée dépasse un seuil $\\theta$\n",
+    "        - `1` si le signal d'entrée dépasse un seuil $\\activthres$\n",
     "        - `0` sinon\n",
     "- des *unités d'associations (A-units)*\n",
     "    - retournent `0` ou `1`:\n",
-    "        - `1` si la somme des signaux d'entrée dépasse un seuil $\\theta$\n",
+    "        - `1` si la somme des signaux d'entrée dépasse un seuil $\\activthres$\n",
     "        - `0` sinon\n",
     "- des *unités de réponse (R-units)*: sortie du réseau\n",
     "    - retournent `1`, `-1` ou une valeur indéterminée:\n",
@@ -36,17 +67,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Calcul de $e_j$ :\n",
-    "\n",
+    "Evaluation de la fonction:\n",
     "$$\n",
-    "e_j = \\sum s_i w_{ij} = si1 . wij1 + si2 . wij2 + si3 . wij3 + si4 . wij4\n",
+    "\\pot = \\sum \\sigin \\wij\n",
     "$$\n",
     "\n",
-    "Calcul du nouveau poid $w$ :\n",
+    "$$\n",
+    "\\sigout = \\activfunc(\\pot - \\activthres)\n",
+    "$$\n",
+    "\n",
+    "Fonction de transfert: signe et heaviside"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "#x = np.linspace(-5, 5, 300)\n",
+    "#y = np.array([-1 if xi < 0 else 1 for xi in x])\n",
+    "#plt.plot(x, y)\n",
+    "\n",
+    "plt.hlines(y=-1, xmin=-5, xmax=0, color='red')\n",
+    "plt.hlines(y=1, xmin=0, xmax=5, color='red')\n",
+    "\n",
+    "plt.hlines(y=0, xmin=-5, xmax=5, color='gray', linestyles='dotted')\n",
+    "plt.vlines(x=0, ymin=-2, ymax=2, color='gray', linestyles='dotted')\n",
+    "\n",
+    "plt.title(\"Fonction signe\")\n",
+    "plt.axis([-5, 5, -2, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#x = np.linspace(-5, 5, 300)\n",
+    "#y = (x > 0).astype('float')\n",
+    "#plt.plot(x, y)\n",
+    "\n",
+    "plt.hlines(y=0, xmin=-5, xmax=0, color='red')\n",
+    "plt.hlines(y=1, xmin=0, xmax=5, color='red')\n",
+    "\n",
+    "plt.hlines(y=0, xmin=-5, xmax=5, color='gray', linestyles='dotted')\n",
+    "plt.vlines(x=0, ymin=-2, ymax=2, color='gray', linestyles='dotted')\n",
+    "\n",
+    "plt.title(\"Fonction heaviside\")\n",
+    "plt.axis([-5, 5, -2, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Règle du Perceptron (mise à jour des poid $\\wij$):\n",
     "\n",
     "$$\n",
-    "w_{ij}(t+1) = w_{ij}(t) + n (d_j - s_j) s_i\n",
+    "\\wij(\\it + 1) = \\wij(\\it) + \\learnrate (\\sigoutdes - \\sigout) \\sigin\n",
     "$$"
    ]
   },
@@ -54,18 +140,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nombre de neurones associatifs (A-units) :\n",
-    "    \n",
-    "    Nombre d'unités sensitives : 4\n",
-    "    \n",
-    "    Entrez le pas d'apprentissage ƞ :\n",
-    "ƞ : 1\n",
+    "* $\\learnrate$: pas d'apprentissage, $\\learnrate \\in [0, 1]$. Géneralement, on lui donne une valeur proche de 1 au début de l'apprentissage et on diminue sa valeur à chaque itération.\n",
     "\n",
-    "    Entrez les poids de depart des synapses du réseau :\n",
-    "wij0 : \n",
-    "    \n",
-    "    Entrez le motif à apprendre :\n",
-    "si1 : si2 : si3 : si4 : "
+    "Poids de depart des synapses du réseau\n",
+    "Nombre de neurones associatifs (A-units)\n",
+    "Nombre d'unités sensitives\n",
+    "Motif à apprendre"
    ]
   },
   {
@@ -111,11 +191,11 @@
    },
    "outputs": [],
    "source": [
-    "# Init weights\n",
+    "# Poids de depart des synapses du réseau\n",
     "initial_weights = np.array([0., 0., 0., 0., 2.])\n",
     "\n",
-    "# Set \"learning rate\" factor\n",
-    "nu = 1."
+    "# Pas d'apprentissage eta=1\n",
+    "learning_rate = 1."
    ]
   },
   {
@@ -126,19 +206,80 @@
    },
    "outputs": [],
    "source": [
-    "def update_weights(w, x, yd):\n",
-    "    s = np.sum(x * w)\n",
-    "    yo = 1. if s >= 0. else 0.\n",
-    "    w = w + nu * (yd - yo) * x\n",
-    "    print(x, s, yo, yd, w)\n",
-    "    return w\n",
+    "class Log:\n",
+    "    def __init__(self):\n",
+    "        self.input_signal = []\n",
+    "        self.output_signal = []\n",
+    "        self.desired_output_signal = []\n",
+    "        self.error = []\n",
+    "        self.weights = []\n",
+    "        self.iteration = []\n",
+    "        self.current_iteration = 0\n",
+    "        \n",
+    "    def log(self, input_signal, output_signal, desired_output_signal, error, weights):\n",
+    "        self.input_signal.append(input_signal)\n",
+    "        self.output_signal.append(output_signal)\n",
+    "        self.desired_output_signal.append(desired_output_signal)\n",
+    "        self.error.append(error)\n",
+    "        self.weights.append(weights)\n",
+    "        self.iteration.append(self.current_iteration)\n",
+    "        \n",
+    "log = Log()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sign_function(x):\n",
+    "    y = 1. if x >= 0. else -1.\n",
+    "    return y\n",
     "\n",
-    "def learn_examples(example_list, label_list, w, num_iterations):\n",
+    "def heaviside_function(x):\n",
+    "    y = 1. if x >= 0. else 0.\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def activation_function(p):\n",
+    "    return heaviside_function(p)\n",
+    "\n",
+    "def evaluate_network(weights, input_signal):      # TODO: find a better name\n",
+    "    p = np.sum(input_signal * weights)\n",
+    "    output_signal = activation_function(p)\n",
+    "    return output_signal\n",
+    "\n",
+    "def update_weights(weights, input_signal, desired_output_signal):\n",
+    "    output_signal = evaluate_network(weights, input_signal)\n",
+    "    error = desired_output_signal - output_signal\n",
+    "    weights = weights + learning_rate * error * input_signal\n",
+    "    log.log(input_signal, output_signal, desired_output_signal, error, weights)\n",
+    "    return weights\n",
+    "\n",
+    "def learn_examples(example_list, label_list, weights, num_iterations):\n",
     "    for it in range(num_iterations):\n",
-    "        print(it)\n",
-    "        for x, yd in zip(example_list, label_list):\n",
-    "            w = update_weights(w, np.array(x + (-1,)), yd)\n",
-    "    return w"
+    "        log.current_iteration = it\n",
+    "        for input_signal, desired_output_signal in zip(example_list, label_list):\n",
+    "            weights = update_weights(weights, np.array(input_signal + (-1,)), desired_output_signal)\n",
+    "    return weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rappel: $\\sigin \\in \\{0, 1\\}$"
    ]
   },
   {
@@ -150,6 +291,8 @@
    "outputs": [],
    "source": [
     "example_list = tuple(reversed(tuple(itertools.product((0., 1.), repeat=4))))\n",
+    "\n",
+    "# Motif à apprendre: (1 0 0 1)\n",
     "label_list = [1. if x == (1., 0., 0., 1.) else 0. for x in example_list]\n",
     "\n",
     "print(example_list)\n",
@@ -164,8 +307,56 @@
    },
    "outputs": [],
    "source": [
-    "learn_examples(example_list, label_list, initial_weights, 4)"
+    "weights = learn_examples(example_list, label_list, initial_weights, 5)\n",
+    "weights"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for input_signal, output_signal, desired_output_signal, error, weights, iteration in zip(log.input_signal, log.output_signal, log.desired_output_signal, log.error, log.weights, log.iteration):\n",
+    "    print(iteration, input_signal, output_signal, desired_output_signal, error, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(log.error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(np.array([log.iteration, log.error]).T, columns=[\"Iteration\", \"Error\"])\n",
+    "abs_err_per_it = abs(df).groupby([\"Iteration\"]).sum()\n",
+    "abs_err_per_it.plot(title=\"Sum of absolute errors per iteration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
